# SLAE

./: CMakeLists.txt
csv/: a.out  mpi.cpp  number_of_iterations.csv  results.csv
progonka/: CMakeLists.txt
progonka/src/: all  progonka.cpp  progonka.h
progonka/test/: CMakeLists.txt  CmakeLists.txt  main.cpp
src/: CSR_matrix.h  chebyshev.h  dense_matrix.h  gaussSeidel.h  jacobi.h  linspace.h  mpi.h  progonka.h  three_diag_matrix.h
test/: CMakeLists.txt  test_fifth.cpp  test_foth.cpp  test_mpi.cpp  test_three_giag.cpp  графики2.ipynb
